# WizARds

./: .gitignore  Cargo.toml  README.md  build.rs  get_oxr_loader.sh  get_runtime_libs.sh  grep  manifest.yaml  privacy_policy.txt
.github/workflows/: autocheck.yml
assets/: dog.glb  white bear.glb
src/: assets.rs  boss.rs  health_bar.rs  lib.rs  main.rs  network.rs  ovr.rs  player.rs  projectile.rs  rollback.rs  speech.rs  spell_control.rs  spells.rs  text.rs  xr.rs
src/boss/: boss_attack.rs  boss_state.rs  mod.rs
src/network/: client_init.rs  host_init.rs  mod.rs  multicast.rs
src/xr/: depth.rs  depth.wgsl  mod.rs  scene.rs
