[package]
name = "wizARds"
version = "0.0.1"
edition = "2021"
description = "Example for building an Android OpenXR app with Bevy"

[lib]
name = "wizARds"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "wizARds"
path = "src/main.rs"

[dependencies]
ash = "0.37.3"
bevy = "0.13"
bevy_xpbd_3d = "0.4.2"
bevy_oxr = { git = "https://github.com/goudanough/bevy_oxr", rev = "942e9f85a91d7ec7796661dfb62dcad6baa2753b", default-features = false }
bevy_ggrs = "0.15.0"
bytemuck = { version = "1.14.1", features = ["derive"] }
bevy_hanabi = { version = "0.10", default-features = false, features = ["3d"] }
cpal = "0.15.2"
crossbeam = "0.8.4"
vosk = "0.2.0"
wgpu = "0.19.1"
zip = "0.6.6"

[patch.crates-io]
ggrs = { git = "https://github.com/goudanough/ggrs", rev = "78b59934ac964c4fad47908e922f520b4a3228bf" }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = "0.5.2"

[profile.release]
opt-level = 3
lto = "thin"

# I've added this because it could technically give a faster binary
[profile.super-release]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
